@@ -209,6 +209,214 @@
       <filename>DejaVuSans.ttf</filename>
       <size>40</size>
     </font>
+    <!-- Addon fonts -->
+    <font>
+      <name>osmc_addon_Font60</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <size>60</size>
+    </font>
+    <font>
+      <name>osmc_addon_Font40</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <size>40</size>
+    </font>
+    <font>
+      <name>osmc_addon_Font30</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <linespacing>0.88</linespacing>
+      <size>30</size>
+    </font>
+    <font>
+      <name>osmc_addon_Font26</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <linespacing>0.88</linespacing>
+      <size>26</size>
+    </font>
+    <!-- Old addon fonts -->
+    <font>
+      <name>osmc_addon_OLD_Font72</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>72</size>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font48</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>48</size>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font42</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>42</size>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font36</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>36</size>
+      <linespacing>1.3</linespacing>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font33</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>33</size>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font30</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>30</size>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font27</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>27</size>
+      <linespacing>1.3</linespacing>
+    </font>
+    <font>
+      <name>osmc_addon_OLD_Font25</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>25</size>
+      <linespacing>1.3</linespacing>
+    </font>
+    <!-- Addon 720 fonts -->
+    <font>
+      <name>osmc_addon_720_Font60</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <size>40</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_Font40</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <size>27</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_Font30</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <linespacing>0.88</linespacing>
+      <size>20</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_Font26</name>
+      <filename>OpenSans-Regular.ttf</filename>
+      <linespacing>0.88</linespacing>
+      <size>17</size>
+    </font>
+    <!-- Old addon 720 fonts -->
+    <font>
+      <name>osmc_addon_720_OLD_Font72</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>48</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font48</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>32</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font42</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>28</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font36</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>24</size>
+      <linespacing>1.3</linespacing>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font33</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>22</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font30</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>20</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font27</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>18</size>
+      <linespacing>1.3</linespacing>
+    </font>
+    <font>
+      <name>osmc_addon_720_OLD_Font25</name>
+      <filename>Roboto-Light.ttf</filename>
+      <size>17</size>
+      <linespacing>1.3</linespacing>
+    </font>
+    <!-- new addon fonts -->
+    <font>
+      <name>osmc_addon_XLarge</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>48</size>
+    </font>
+    <font>
+      <name>osmc_addon_Large</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>43</size>
+    </font>
+    <font>
+      <name>osmc_addon_Med</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>38</size>
+    </font>
+    <font>
+      <name>osmc_addon_Small</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>33</size>
+    </font>
+    <font>
+      <name>osmc_addon_XSmall</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>28</size>
+    </font>
+    <font>
+      <name>osmc_addon_font13</name>
+      <filename>Arial.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>21</size>
+    </font>
+    <!-- new addon 720 fonts -->
+    <font>
+      <name>osmc_addon_720_XLarge</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>32</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_Large</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>29</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_Med</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>25</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_Small</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>22</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_XSmall</name>
+      <filename>NotoSans-Regular.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>19</size>
+    </font>
+    <font>
+      <name>osmc_addon_720_font13</name>
+      <filename>Arial.ttf</filename>
+      <linespacing>0.94</linespacing>
+      <size>14</size>
+    </font>
   </fontset>
   <!--Copy of old default Roboto-->
   <fontset id="Roboto (old default)" unicode="true">
